public/grammar.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = ".";
  var peg$c1 = "true";
  var peg$c2 = "True";
  var peg$c3 = "false";
  var peg$c4 = "False";
  var peg$c5 = "{";
  var peg$c6 = "}";
  var peg$c7 = "audio";
  var peg$c8 = "time";
  var peg$c9 = "rect";
  var peg$c10 = "#";
  var peg$c11 = "diffuse(";
  var peg$c12 = ")";
  var peg$c13 = "rateA(";
  var peg$c14 = "rateB(";
  var peg$c15 = "feed(";
  var peg$c16 = "kill(";
  var peg$c17 = "size(";
  var peg$c18 = "wait(";
  var peg$c19 = "reset";
  var peg$c20 = "automata(";
  var peg$c21 = "playMusic(";
  var peg$c22 = "pauseMusic";
  var peg$c23 = "colorA(";
  var peg$c24 = "colorB(";
  var peg$c25 = "kal";
  var peg$c26 = "blur";
  var peg$c27 = "celShade";
  var peg$c28 = "foggy";
  var peg$c29 = "light";
  var peg$c30 = "noise";
  var peg$c31 = "oldFilm";
  var peg$c32 = "vignette";
  var peg$c33 = "size";
  var peg$c34 = "side";
  var peg$c35 = "noEffect";
  var peg$c36 = "(";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[1-9]/;
  var peg$r2 = /^[^{}]/;
  var peg$r3 = /^[ \t\n\r]/;
  var peg$r4 = /^[^{} \t\n\r]/;
  var peg$r5 = /^[0-9A-Fa-f]/;

  var peg$e0 = peg$otherExpectation("start");
  var peg$e1 = peg$otherExpectation("term");
  var peg$e2 = peg$literalExpectation(".", false);
  var peg$e3 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e4 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e5 = peg$literalExpectation("true", false);
  var peg$e6 = peg$literalExpectation("True", false);
  var peg$e7 = peg$literalExpectation("false", false);
  var peg$e8 = peg$literalExpectation("False", false);
  var peg$e9 = peg$otherExpectation("primary");
  var peg$e10 = peg$classExpectation(["{", "}"], true, false);
  var peg$e11 = peg$literalExpectation("{", false);
  var peg$e12 = peg$literalExpectation("}", false);
  var peg$e13 = peg$otherExpectation("whitespace");
  var peg$e14 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e15 = peg$otherExpectation("keyword");
  var peg$e16 = peg$classExpectation(["{", "}", " ", "\t", "\n", "\r"], true, false);
  var peg$e17 = peg$literalExpectation("audio", false);
  var peg$e18 = peg$literalExpectation("time", false);
  var peg$e19 = peg$literalExpectation("rect", false);
  var peg$e20 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false);
  var peg$e21 = peg$literalExpectation("#", false);
  var peg$e22 = peg$literalExpectation("diffuse(", false);
  var peg$e23 = peg$literalExpectation(")", false);
  var peg$e24 = peg$literalExpectation("rateA(", false);
  var peg$e25 = peg$literalExpectation("rateB(", false);
  var peg$e26 = peg$literalExpectation("feed(", false);
  var peg$e27 = peg$literalExpectation("kill(", false);
  var peg$e28 = peg$literalExpectation("size(", false);
  var peg$e29 = peg$literalExpectation("wait(", false);
  var peg$e30 = peg$literalExpectation("reset", false);
  var peg$e31 = peg$literalExpectation("automata(", false);
  var peg$e32 = peg$literalExpectation("playMusic(", false);
  var peg$e33 = peg$literalExpectation("pauseMusic", false);
  var peg$e34 = peg$literalExpectation("colorA(", false);
  var peg$e35 = peg$literalExpectation("colorB(", false);
  var peg$e36 = peg$literalExpectation("kal", false);
  var peg$e37 = peg$literalExpectation("blur", false);
  var peg$e38 = peg$literalExpectation("celShade", false);
  var peg$e39 = peg$literalExpectation("foggy", false);
  var peg$e40 = peg$literalExpectation("light", false);
  var peg$e41 = peg$literalExpectation("noise", false);
  var peg$e42 = peg$literalExpectation("oldFilm", false);
  var peg$e43 = peg$literalExpectation("vignette", false);
  var peg$e44 = peg$literalExpectation("size", false);
  var peg$e45 = peg$literalExpectation("side", false);
  var peg$e46 = peg$literalExpectation("noEffect", false);
  var peg$e47 = peg$literalExpectation("(", false);

  var peg$f0 = function(body) { return body; };
  var peg$f1 = function() { return "true" };
  var peg$f2 = function() { return "false" };
  var peg$f3 = function(first, dec) { return parseFloat(`${first}`) + parseFloat(`${dec}`); };
  var peg$f4 = function(point, num) { return parseFloat("." + `${num}`); };
  var peg$f5 = function(first, dig) { return parseInt(`${text()}`); };
  var peg$f6 = function() { return text(); };
  var peg$f7 = function(expr) { return expr.join("") };
  var peg$f8 = function() { return "'audio'";};
  var peg$f9 = function() { return Date.getTime; };
  var peg$f10 = function(x, y, w, h) { 
   var r = `shape.rect( ${x}, ${y}, ${w}, ${h} )`
   return r
   };
  var peg$f11 = function(h) { return `${h}`; };
  var peg$f12 = function(h) { return `"#${h.join("")}"` };
  var peg$f13 = function(bool) { return `setDiffuse(${bool})`;};
  var peg$f14 = function(r) { return `rateA(${r})` ; };
  var peg$f15 = function(r) { return `rateB(${r})` ; };
  var peg$f16 = function(f) { return `feed(${f})` ; };
  var peg$f17 = function(k) { return `kill(${k})` ; };
  var peg$f18 = function(s) { return `size(${s})` ; };
  var peg$f19 = function(t) { return `wait(${t}*1000)` };
  var peg$f20 = function() { return `reset()` };
  var peg$f21 = function(bool) { return `setAutomata(${bool})`;};
  var peg$f22 = function(trackNum) { return `playMusic(${trackNum})` };
  var peg$f23 = function() { return `pauseMusic()` };
  var peg$f24 = function(h) { return `colorA(${h})` ; };
  var peg$f25 = function(h) { return `colorB(${h})` ; };
  var peg$f26 = function() { return `noEffect()` };
  var peg$f27 = function(func) { return `postEffect("${func}")`};
  var peg$f28 = function(attr) { return `${attr}` };
  var peg$f29 = function(e, att, val) { return `setEffect('${e}', '${att}', ${val})`};
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = peg$parseterm();
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseterm();
      }
    } else {
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseterm() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsekeyword();
    if (s2 === peg$FAILED) {
      s2 = peg$parsesentence();
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parsePOINT() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 46) {
      s0 = peg$c0;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }

    return s0;
  }

  function peg$parseDIGIT() {
    var s0;

    if (peg$r0.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }

    return s0;
  }

  function peg$parseINTDIGIT() {
    var s0;

    if (peg$r1.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parseTRUE() {
    var s0, s1;

    if (input.substr(peg$currPos, 4) === peg$c1) {
      s0 = peg$c1;
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f1();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseFALSE() {
    var s0, s1;

    if (input.substr(peg$currPos, 5) === peg$c3) {
      s0 = peg$c3;
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseprimary() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parsefloat();
    if (s0 === peg$FAILED) {
      s0 = peg$parseint();
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }

    return s0;
  }

  function peg$parsefloat() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseint();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsedec();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedec() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsePOINT();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseDIGIT();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseDIGIT();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseint() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseINTDIGIT();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseDIGIT();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseDIGIT();
      }
      peg$savedPos = s0;
      s0 = peg$f5(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseboolean() {
    var s0;

    s0 = peg$parseTRUE();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFALSE();
    }

    return s0;
  }

  function peg$parseregular() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$r2.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$r2.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e10); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f6();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseexpr() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseregular();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseregular();
    }

    return s0;
  }

  function peg$parsesentence() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e11); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseexpr();
      if (input.charCodeAt(peg$currPos) === 125) {
        s3 = peg$c6;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e12); }
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f7(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseregular();
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$r3.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e14); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$r3.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e14); }
      }
    }
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e13); }

    return s0;
  }

  function peg$parsekeyword() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$parsedifFct();
    if (s0 === peg$FAILED) {
      s0 = peg$parseautomata();
      if (s0 === peg$FAILED) {
        s0 = peg$parseeffects();
        if (s0 === peg$FAILED) {
          s0 = peg$parsereset();
          if (s0 === peg$FAILED) {
            s0 = peg$parsemusic();
            if (s0 === peg$FAILED) {
              s0 = peg$parseaudio();
              if (s0 === peg$FAILED) {
                s0 = peg$parsetime();
                if (s0 === peg$FAILED) {
                  s0 = peg$parserect();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parserateA();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parserateB();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parsefeed();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parsekill();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parsewait();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseprimary();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parsehex();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parsecol();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$currPos;
                                    s1 = [];
                                    if (peg$r4.test(input.charAt(peg$currPos))) {
                                      s2 = input.charAt(peg$currPos);
                                      peg$currPos++;
                                    } else {
                                      s2 = peg$FAILED;
                                      if (peg$silentFails === 0) { peg$fail(peg$e16); }
                                    }
                                    if (s2 !== peg$FAILED) {
                                      while (s2 !== peg$FAILED) {
                                        s1.push(s2);
                                        if (peg$r4.test(input.charAt(peg$currPos))) {
                                          s2 = input.charAt(peg$currPos);
                                          peg$currPos++;
                                        } else {
                                          s2 = peg$FAILED;
                                          if (peg$silentFails === 0) { peg$fail(peg$e16); }
                                        }
                                      }
                                    } else {
                                      s1 = peg$FAILED;
                                    }
                                    if (s1 !== peg$FAILED) {
                                      s0 = input.substring(s0, peg$currPos);
                                    } else {
                                      s0 = s1;
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e15); }
    }

    return s0;
  }

  function peg$parseaudio() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c7) {
      s1 = peg$c7;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e17); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f8();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsetime() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c8) {
      s1 = peg$c8;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e18); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f9();
    }
    s0 = s1;

    return s0;
  }

  function peg$parserect() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e19); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseprimary();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseprimary();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseprimary();
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseprimary();
            if (s9 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f10(s3, s5, s7, s9);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsehexChar() {
    var s0, s1;

    s0 = peg$currPos;
    if (peg$r5.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e20); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f11(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsehex() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
